--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,17 @@
 .navbar a:hover{
 
 }
+
+.hero-section{
+  background: rgb(2,0,36);
+  background: linear-gradient(90deg, rgba(2,0,36,1) 0%, rgba(0,132,173,1) 100%);
+  background-size: cover; 
+  color: #ffffff;
+  font-weight:800;
+  font-size:40px;
+  text-align: center;
+  display:flex;
+  justify-content:center;
+  align-items:center;
+  min-height:90vh;
+}
